--- a/src/components/app/DesignConicalHatApp.css
+++ b/src/components/app/DesignConicalHatApp.css
@@ -12,7 +12,8 @@
   flex-direction: row;
   justify-content: left;
   align-items: center;
-  flex-wrap:nowrap;
+  flex-wrap:wrap;
+  max-height: 500px;
   overflow: scroll;
   min-height: 70px;
   gap: 10px;
