--- a/src/components/app/DesignConicalHatApp.css
+++ b/src/components/app/DesignConicalHatApp.css
@@ -7,15 +7,28 @@
   border: 1px solid #000;
 }
 
+.texture_list_hoirizontal_container{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-height: 400px;
+  min-height: 400px;
+}
+.texture_list_hoirizontal_container .texture_type_list{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  flex-wrap:wrap;
+  gap: 2px;
+}
 .texture_list_hoirizontal_container .texture_list{
   display: flex;
   flex-direction: row;
   justify-content: left;
   align-items: center;
   flex-wrap:wrap;
-  max-height: 500px;
   overflow: scroll;
-  min-height: 70px;
   gap: 10px;
 }
 
